--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@ant-design/icons": "^5.4.0",
     "@apollo/client": "^3.8.4",
+    "@reactour/popover": "^1.2.0",
     "@reactour/tour": "^3.6.1",
     "antd": "^5.19.3",
     "graphql": "^16.8.1",
@@ -15,6 +16,7 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@graphql-codegen/cli": "^5.0.3",
     "@types/react": "^18.2.23",
     "@types/react-dom": "^18.2.8",
     "react-scripts": "^5.0.1",
@@ -48,5 +50,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
